# qca-edge

./: Cargo.toml  LICENSE
qca-common/: Cargo.toml
qca-common/src/: lib.rs  traits.rs
qca-common/src/mbscanners/: channel.rs  device.rs  mod.rs  scanline.rs
qca-common/src/tag_data/: asset_data.rs  client_data.rs  device_data.rs  mod.rs  tag_data.rs  unit_data.rs
qca-mbscanner/: Cargo.toml
qca-mbscanner-config/: Cargo.toml
qca-mbscanner-config/src/: channel.rs  device.rs  lib.rs  scanline.rs
qca-mbscanner/src/: main.rs
